# cian_houses_2024

./: .gitignore  README.md
avito_parser/: pyproject.toml  pyrightconfig.json  requirement.txt
avito_parser/avito_parser/: house.py  links_to_check.csv  locator.py  main.py  scrapy.cfg  settings.ini
avito_parser/avito_parser/avito_houses/: items.py  middlewares.py  pipelines.py  settings.py
avito_parser/avito_parser/avito_houses/spiders/: avito_houses.py
cian_parser/: README.md  pyproject.toml  pyrightconfig.json
cian_parser/cian_parser/: a.ipynb  links_to_check.csv  main.py  settings.ini
cian_parser/cian_parser/collected_data/: cian_houses.csv  cian_houses_1_flats.csv  cian_houses_2_flats.csv  cian_houses_3_flats.csv  cian_houses_5_flats.csv  cian_houses_6_flats.csv  links_to_check.csv
cian_parser/cian_parser/collected_data/links/: links_to_check_1.csv  links_to_check_2.csv  links_to_check_3.csv  links_to_check_4.csv  links_to_check_5.csv  links_to_check_6.csv
cian_parser/cian_parser/utils/: __init__.py  cianhouse.py  cianhouseLinkExtractor.py  cianhousePageParser.py
cian_parser/cian_parser/utils/ciantools/: cianhouse.py  cianhouseLinkExtractor.py  cianhouseLocator.py  cianhousePageParser.py
notebooks/: EDA.ipynb  models.ipynb  test.ipynb  (+2 more)
webUI/: pyproject.toml  pyrightconfig.json
webUI/tests/: test.ipynb
webUI/webui/: main.py
webUI/webui/data/: cian_houses_training.csv
webUI/webui/streamlit_pages/: pages_selections.toml
webUI/webui/streamlit_pages/pages/: analytics_page.py  prediciton_page.py
webUI/webui/utils/analytics/: __init__.py  cianhousesMap.py
webUI/webui/utils/prediction/: __init__.py  predicicitonMap.py
(+12 files in other folders)
