[tool.poetry]
name = "avito-parser"
version = "0.1.0"
description = ""
authors = ["sanonesan <ezcudze@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
undetected-chromedriver = "^3.5.5"
seleniumbase = "^4.30.2"
configparser = "^7.1.0"
webdriver-manager = "^4.0.2"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
prefer-active-python = true
